@@ -6,18 +6,23 @@ import com.eindopdracht.DJCorner.enums.Status;
 import com.eindopdracht.DJCorner.models.Feedback;
 import com.eindopdracht.DJCorner.models.Submission;
 import com.eindopdracht.DJCorner.models.Tag;
+import com.eindopdracht.DJCorner.models.User;
 import com.eindopdracht.DJCorner.services.TagService;
+import com.eindopdracht.DJCorner.services.UserService;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class SubmissionMapper {
 
     private final TagService tagService;
+    private final UserService userService;
 
-    public SubmissionMapper(TagService tagService) {
+    public SubmissionMapper(TagService tagService, UserService userService) {
         this.tagService = tagService;
+        this.userService = userService;
     }
 
     public Submission toEntity(SubmissionRequestDto submissionRequestDto) {
@@ -38,6 +43,11 @@ public class SubmissionMapper {
                 .toList();
 
         submission.setTags(tagObjects);
+
+        if (submissionRequestDto.getUserId() != null) {
+            User user = userService.findUserById(submissionRequestDto.getUserId());
+            submission.setUser(user);
+        }
 
         return submission;
     }
@@ -77,21 +87,21 @@ public class SubmissionMapper {
 
         submissionResponseDto.setAudioDownloadUrl("submissions/" + submission.getId() + "/audio");
 
+        submissionResponseDto.setUserId(submission.getUser().getId());
+
+
         return submissionResponseDto;
     }
 
     public void updateEntity(Submission submission, SubmissionRequestDto submissionRequestDto) {
         submission.setTitle(submissionRequestDto.getTitle());
-        submission.setArtistName(submissionRequestDto.getArtistName());
         submission.setBpm(submissionRequestDto.getBpm());
-        submission.setMusicFileName(submissionRequestDto.getMusicFileName());
-        submission.setMusicFileType(submissionRequestDto.getMusicFileType());
 
         if (submissionRequestDto.getTags() != null) {
             List<Tag> tagObjects = submissionRequestDto.getTags()
                     .stream()
                     .map(tagService::findOrCreateByName)
-                    .toList();
+                    .collect(Collectors.toList());
             submission.setTags(tagObjects);
         }
     }
@@ -115,7 +125,7 @@ public class SubmissionMapper {
         if (submissionRequestDto.getTags() != null) {
             List<Tag> tagObjects = submissionRequestDto.getTags().stream()
                     .map(tagService::findOrCreateByName)
-                    .toList();
+                    .collect(Collectors.toList());
             submission.setTags(tagObjects);
         }
     }
